--- a/index.html
+++ b/index.html
@@ -61,11 +61,44 @@
         <!-- <div class="icon-container">
             <img src="./assets/images/ecu-tablet.jpg" alt="Guy holding a tablet">
         </div> -->
-        <h3 class="card-title">ECU Mapping</h3>
+        <h3 class="card-title">Performance Exhausts and Intakes</h3>
         <p class="card-description">
-            THis is a brief explanation about ECUs and how to map them. Since I dont really know what to right in here, writing this down is a great idea haha...
+          Take your vehicle's power and sound with our high-performance exhaust and intake systems to another level. Achieve improved airflow, horsepower, and a bold, aggressive tone tailored to your driving needs
           </p>
-        <a href="#" class="button">Learn More</a>
+        <!-- <a href="#" class="button">Learn More</a> -->
+      </div>
+
+      <div class="service-card">
+        <!-- <div class="icon-container">
+            <i class="fa-solid fa-user"></i>
+        </div> -->
+        <h3 class="card-title">Mechanical Services and Repairs</h3>
+        <p class="card-description">
+            Expert mechanical services for all performance vehicles. From routine maintenance to complex repairs, we ensure your car operates at peak performance and reliability with precision and care
+          </p>
+        <!-- <a href="#" class="button">Learn More</a> -->
+      </div>
+
+      <div class="service-card">
+        <!-- <div class="icon-container">
+            <i class="fa-solid fa-user"></i>
+        </div> -->
+        <h3 class="card-title">Dent Repair and Painting</h3>
+        <p class="card-description">
+          Restore your car’s aesthetics with our premium dent repair and custom painting services. From minor dings to full-bodywork, we bring your vehicle back to its pristine form.
+          </p>
+        <!-- <a href="#" class="button">Learn More</a> -->
+      </div>
+
+      <div class="service-card">
+        <!-- <div class="icon-container">
+            <i class="fa-solid fa-user"></i>
+        </div> -->
+        <h3 class="card-title">Detailing and PPF</h3>
+        <p class="card-description">
+          Protect and enhance your car's appearance with our detailing and Paint Protection Film (PPF) services. Enjoy a showroom shine and guard against scratches, chips, and environmental damage
+          </p>
+        <!-- <a href="#" class="button">Learn More</a> -->
       </div>
 
       <div class="service-card">
@@ -74,52 +107,20 @@
         </div> -->
         <h3 class="card-title">ECU Mapping</h3>
         <p class="card-description">
-            With the idea of imparting programming
-            knowledge, Mr. Sandeep Jain, an IIT
-            Roorkee alumnus started a dream,
-            GeeksforGeeks. Whether programming
-            excites you or you feel stifled,
-            how to ace data structures and
-            algorithms, GeeksforGeeks is a
-            one-stop solution.
+          Optimize your car’s engine performance with our advanced ECU mapping services. Unleash greater power, improved fuel efficiency, and seamless driving dynamics tailored to your vehicle
           </p>
-        <a href="#" class="button">Learn More</a>
+        <!-- <a href="#" class="button">Learn More</a> -->
       </div>
 
       <div class="service-card">
         <!-- <div class="icon-container">
             <i class="fa-solid fa-user"></i>
         </div> -->
-        <h3 class="card-title">ECU Mapping</h3>
+        <h3 class="card-title">Dashcams</h3>
         <p class="card-description">
-            With the idea of imparting programming
-            knowledge, Mr. Sandeep Jain, an IIT
-            Roorkee alumnus started a dream,
-            GeeksforGeeks. Whether programming
-            excites you or you feel stifled,
-            how to ace data structures and
-            algorithms, GeeksforGeeks is a
-            one-stop solution.
+          Drive with confidence using our professional dashcam installation services. Record every journey with high-quality video for enhanced safety, security, and peace of mind
           </p>
-        <a href="#" class="button">Learn More</a>
-      </div>
-
-      <div class="service-card">
-        <!-- <div class="icon-container">
-            <i class="fa-solid fa-user"></i>
-        </div> -->
-        <h3 class="card-title">ECU Mapping</h3>
-        <p class="card-description">
-            With the idea of imparting programming
-            knowledge, Mr. Sandeep Jain, an IIT
-            Roorkee alumnus started a dream,
-            GeeksforGeeks. Whether programming
-            excites you or you feel stifled,
-            how to ace data structures and
-            algorithms, GeeksforGeeks is a
-            one-stop solution.
-          </p>
-        <a href="#" class="button">Learn More</a>
+        <!-- <a href="#" class="button">Learn More</a> -->
       </div>
     </div>
 
@@ -127,7 +128,7 @@
       <h2>About Us</h2>
       <div class="container">
         <p class="description">
-          We, at FastLane Garage, are an established company specializing in high-performance vehicle upgrades. Our services encompass a wide range of offerings, including customizations for vehicles, performance part upgrades, premium car services and maintenance. We take pride in providing car enthusiasts with personalized solutions to meet their unique requirements, ensuring that each vehicle is not only styled to perfection but also optimized for superior performance. As a growing brand, we remain committed to delivering outstanding service and exceptional products to our valued customers
+          We at FastLane Garage, are a trusted name in high-performance vehicle upgrades, specializing in transforming vehicles into masterpieces of style and power. Our extensive range of services includes performance part upgrades, custom vehicle modifications, premium car care, and expert maintenance solutions. We pride ourselves on delivering personalized solutions tailored to the unique needs of every car enthusiast, ensuring each vehicle is not only visually stunning but also optimized for peak performance. As a growing brand, our commitment to excellence drives us to provide exceptional service and top-tier products for our valued customers
         </p>
         <!-- <div class="locatio-container">
           Thsi is a map
