--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <div class="hero">
       <div class="hero-left">
         <h1>Unleash Your Car's True Potential</h1>
-        <p>
+        <p id="paragraph">
           Premium upgrades and personalized solutions
           for every car enthusiast at FastLane Garage
         </p>
-        <button>
+        <button id="button-text">
           Book an Appointment
         </button>
       </div>
@@ -58,128 +58,101 @@
     </div>
 
     <div class="services-container" id="services">
-      <h2>Our Services</h2>
+      <h2 id="secondary-heading">Our Services</h2>
       <div class="service-card">
         <!-- <div class="icon-container">
             <img src="./assets/images/ecu-tablet.jpg" alt="Guy holding a tablet">
         </div> -->
         <h3 class="card-title">Performance Exhausts and Intakes</h3>
-        <p class="card-description">
+        <p class="card-description" id="paragraph">
           Take your vehicle's power and sound with our high-performance exhaust and intake systems to another level. Achieve improved airflow, horsepower, and a bold, aggressive tone tailored to your driving needs
           </p>
-        <!-- <a href="#" class="button">Learn More</a> -->
       </div>
 
       <div class="service-card">
-        <!-- <div class="icon-container">
-            <i class="fa-solid fa-user"></i>
-        </div> -->
         <h3 class="card-title">Mechanical Services and Repairs</h3>
-        <p class="card-description">
+        <p class="card-description" id="paragraph">
             Expert mechanical services for all performance vehicles. From routine maintenance to complex repairs, we ensure your car operates at peak performance and reliability with precision and care
           </p>
-        <!-- <a href="#" class="button">Learn More</a> -->
       </div>
 
       <div class="service-card">
-        <!-- <div class="icon-container">
-            <i class="fa-solid fa-user"></i>
-        </div> -->
         <h3 class="card-title">Dent Repair and Painting</h3>
-        <p class="card-description">
+        <p class="card-description" id="paragraph">
           Restore your car’s aesthetics with our premium dent repair and custom painting services. From minor dings to full-bodywork, we bring your vehicle back to its pristine form.
           </p>
-        <!-- <a href="#" class="button">Learn More</a> -->
       </div>
 
       <div class="service-card">
-        <!-- <div class="icon-container">
-            <i class="fa-solid fa-user"></i>
-        </div> -->
         <h3 class="card-title">Detailing and PPF</h3>
-        <p class="card-description">
+        <p class="card-description" id="paragraph">
           Protect and enhance your car's appearance with our detailing and Paint Protection Film (PPF) services. Enjoy a showroom shine and guard against scratches, chips, and environmental damage
           </p>
-        <!-- <a href="#" class="button">Learn More</a> -->
       </div>
 
       <div class="service-card">
-        <!-- <div class="icon-container">
-            <i class="fa-solid fa-user"></i>
-        </div> -->
         <h3 class="card-title">ECU Mapping</h3>
-        <p class="card-description">
+        <p class="card-description" id="paragraph">
           Optimize your car’s engine performance with our advanced ECU mapping services. Unleash greater power, improved fuel efficiency, and seamless driving dynamics tailored to your vehicle
           </p>
-        <!-- <a href="#" class="button">Learn More</a> -->
       </div>
 
       <div class="service-card">
-        <!-- <div class="icon-container">
-            <i class="fa-solid fa-user"></i>
-        </div> -->
         <h3 class="card-title">Dashcams</h3>
-        <p class="card-description">
+        <p class="card-description" id="paragraph">
           Drive with confidence using our professional dashcam installation services. Record every journey with high-quality video for enhanced safety, security, and peace of mind
           </p>
-        <!-- <a href="#" class="button">Learn More</a> -->
       </div>
     </div>
 
     <div class="about-section" id="about">
       <h2>About Us</h2>
       <div class="container">
-        <p class="description">
+        <p class="description"  id="paragraph about">
           We at FastLane Garage, are a trusted name in high-performance vehicle upgrades, specializing in transforming vehicles into masterpieces of style and power. Our extensive range of services includes performance part upgrades, custom vehicle modifications, premium car care, and expert maintenance solutions. We pride ourselves on delivering personalized solutions tailored to the unique needs of every car enthusiast, ensuring each vehicle is not only visually stunning but also optimized for peak performance. As a growing brand, our commitment to excellence drives us to provide exceptional service and top-tier products for our valued customers
         </p>
-        <!-- <div class="locatio-container">
-          Thsi is a map
-        </div> -->
-        <!-- <div class="location-container">
-          <a href="#" class="location">You can find us here</a>
-        </div> -->
       </div>
     </div>
 
-    <div class="faq-container">
+    <div class="faq">
       <div class="container">
         <h2>Frequently Asked Questions</h2>
-      <div class="accordion">
-        <div class="accordion-item">
-          <button id="accordion-button-3" aria-expanded="false">
-            <span class="accordion-title">Where are you?</span>
-            <span class="icon" aria-hidden="true"></span>
-          </button>
-          <div class="accordion-content">
-            <p>
-              I'm almost at the finish line so I cant stop now. All I got is gallon in the gas tank! I'm almost at the finish line so I cant stop now, I really got nowhere Im heading just enjoying the ride...
-            </p>
+        <div class="accordion">
+          <div class="accordion-item">
+            <button id="accordion-button-3" aria-expanded="false">
+              <span class="accordion-title">Where are you?</span>
+              <span class="icon" aria-hidden="true"></span>
+            </button>
+            <div class="accordion-content">
+              <p id="paragraph">
+                All I got is gallon in the gas tank! I'm almost at the finish line so I cant stop now, I really dont know where I'm heading just enjoying the ride...
+              </p>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <button id="accordion-button-4" aria-expanded="false">
+              <span class="accordion-title">How expensive are parts?</span>
+              <span class="icon" aria-hidden="true"></span>
+            </button>
+            <div class="accordion-content">
+              <p id="paragraph">
+                How expensive do YOU want 'em to be?
+              </p>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <button id="accordion-button-5" aria-expanded="false">
+              <span class="accordion-title">How reliable are we?</span>
+              <span class="icon" aria-hidden="true"></span>
+            </button>
+            <div class="accordion-content">
+              <p id="paragraph">
+                Can you see an 'R' in FastLane? ye...JK...yes we are reliable
+                Trust me brothaaa
+              </p>
+            </div>
           </div>
         </div>
-        <div class="accordion-item">
-          <button id="accordion-button-4" aria-expanded="false">
-            <span class="accordion-title">How expensive are parts?</span>
-            <span class="icon" aria-hidden="true"></span>
-          </button>
-          <div class="accordion-content">
-            <p>
-              How expensive do YOU want 'em to be?
-            </p>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <button id="accordion-button-5" aria-expanded="false">
-            <span class="accordion-title">How reliable are we?</span>
-            <span class="icon" aria-hidden="true"></span>
-          </button>
-          <div class="accordion-content">
-            <p>
-              Can you see an 'R' in FastLane? ye...JK...yes we are reliable
-              Trust me brothaaa
-            </p>
-          </div>
-        </div>
-      </div>
       </div>
     </div>
   </main>
@@ -191,8 +164,8 @@
        <div class="footer-col">
          <h4>company</h4>
          <ul>
-           <li><a href="#">about us</a></li>
-           <li><a href="#">our services</a></li>
+           <li><a href="#about">about us</a></li>
+           <li><a href="#services">our services</a></li>
          </ul>
        </div>
        <div class="footer-col">
@@ -209,7 +182,7 @@
          <div class="social-links">
            <a href="#"><i class="fab fa-facebook-f"></i></a>
            <a href="#"><i class="fab fa-twitter"></i></a>
-           <a href="#"><i class="fab fa-instagram"></i></a>
+           <a href="https://www.instagram.com/fastlanegarageofficial/"><i class="fab fa-instagram"></i></a> 
          </div>
        </div>
      </div>
@@ -239,7 +212,6 @@
     }
 
     items.forEach((item) => item.addEventListener('click', toggleAccordion));
-
   </script>
 </body>
 </html>
